--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 baseurl: "" # The subpath of your site, e.g. /blog
-url: "https://mhsiddiqui.github.io" # The base hostname & protocol for your site, e.g. http://example.com
+url: "" # The base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
